@startuml player

abstract class Player implements OnTurn{
    {abstract} id : Integer
    {abstract} score : Integer
}

Insecter o-- "0..1" Insect
class Insecter extends Player implements IInsect{
    insect : Insect
}

Mushroomer o-- "1..*" Stem
Mushroomer o-- "1..*" Thread
Mushroomer o-- "0..*" Spore
class Mushroomer extends Player implements IMushroom{
    stems : List<Stem>
    threads : List<Thread>
    spores : List<Spore>
}

@enduml